<resources>
    <string name="app_name">chedengwo</string>
    <string name="action_settings">Settings</string>
    <string name="text1">到站查询</string>
    <string name="chedengwo">车等我</string>
    <string name="query">到站查询</string>
    <string name="iwantto">我要去</string>
    <string name="sousuo">搜索</string>
    <string name="zhongdian">请输入终点</string>
    <string name="qidian">请输入起点</string>
    <string name="title_activity_iwantogo">iwantogo</string>
    <string name="IWG">我要去</string>
    <string name="title_activity_query">Query</string>
    <string name="surroundsites">周边站点查询</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="sites">站点</string>
    <string name="routes">线路</string>
    <string name="pleaseInputsite">请输入站点关键字</string>
    <string name="mylocation">我的位置</string>
    <string name="myloc">我的位置→</string>
    <string name="siteroutesear">站点/路径搜索</string>
    <string name="routekey">请输入路线关键字</string>
</resources>
