<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:baselineAligned="false"
    android:background="#ffffff">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <ImageButton
            android:onClick="back3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/imageButton"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/back" />

        <TextView

            android:layout_width="190dp"
            android:layout_height="60dp"
            android:text="搜索"
            android:id="@+id/textView5"
            android:layout_gravity="center"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="50dp"
            android:textSize="30dp"
            android:textColor="#fefefe"
            android:layout_marginTop="8dp" />
        <RelativeLayout
            android:layout_width="154dp"
            android:layout_height="43dp"
            android:layout_gravity="center_vertical|right"
            style="@style/TextAppearance.AppCompat.Button"
            android:background="#ffffff"
            android:layout_marginRight="10dp">

            <Button
                android:onClick="selectroutes"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:text="@string/routes"
                android:id="@+id/button2"
                android:layout_gravity="center_horizontal"
                android:background="?attr/colorPrimary"
                android:textColor="#ffffff"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="false"
                android:layout_marginRight="2dp" />

            <Button
                android:onClick="selectsites"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:text="@string/sites"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff"
                android:textColor="?attr/colorPrimary"
                android:layout_alignTop="@+id/button2"
                android:layout_toLeftOf="@+id/button2"
                android:layout_toStartOf="@+id/button2"
                android:layout_marginLeft="0dp" />

        </RelativeLayout>


    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#c1c1c1">

        <EditText
            android:hint="@string/pleaseInputsite"
            android:background="#ffffff"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:id="@+id/ed1"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical" />

        <Button
            android:background="#ffffff"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/sousuo"
            android:id="@+id/button3"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp" />

    </LinearLayout>


</LinearLayout>