<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/searlayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:baselineAligned="false"
    android:background="#ffffff">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <ImageButton
            android:onClick="back3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:background="@drawable/back" />

        <TextView

            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="搜索"
            android:id="@+id/textView5"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="50dp"
            android:textSize="23dp"
            android:textColor="#fefefe"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical" />

        <RelativeLayout
            android:layout_width="154dp"
            android:layout_height="43dp"
            android:layout_gravity="center_vertical|right"
            style="@style/TextAppearance.AppCompat.Button"
            android:background="#ffffff">

            <Button
                android:onClick="selectroutes"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:text="@string/routes"
                android:id="@+id/button2"
                android:layout_gravity="center_horizontal"
                android:background="?attr/colorPrimary"
                android:textColor="#ffffff"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="false"
                android:layout_marginRight="2dp" />

            <Button
                android:onClick="selectsites"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:text="@string/sites"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff"
                android:textColor="?attr/colorPrimary"
                android:layout_alignTop="@+id/button2"
                android:layout_toLeftOf="@+id/button2"
                android:layout_toStartOf="@+id/button2"
                android:layout_marginLeft="0dp" />

        </RelativeLayout>


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#c1c1c1">

        <EditText
            android:hint="@string/sitekey"
            android:background="#ffffff"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:id="@+id/ed_site"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical" />

        <Button
            android:onClick="sitesearch"
            android:background="#57d9c1"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/sousuo"
            android:id="@+id/button3"
            android:layout_marginLeft="26dp"
            android:layout_gravity="center_vertical|right" />

    </LinearLayout>


    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@android:id/list"
        android:layout_marginTop="0dp" />


</LinearLayout>